UserControls incorporados a panel main y botonera con llamada a cada UserControl

--- a/PuntoDeVenta/Main.resx
+++ b/PuntoDeVenta/Main.resx
@@ -121,29 +121,32 @@
   <data name="btnReportes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAAFFJREFUSEtjGAWDB+y69/vY7nu//1MLb7/9yxJqNATQ1QL7wK1k4xFiATXwwFqg
-        OO0zVjzz3E+wvPOyr1jlQXjUglELhosF1MD0t2AUYAcMDABSH1DBGUtNqgAAAABJRU5ErkJggg==
+        vwAADr8BOAVTJAAAAIdJREFUSEtjGAWDF9gHbj2GjqFSqGD3ldkMey4fR8HEAqCh/5ExVBgVgA298h8F
+        EwuAhp6kmQXohlPVArvArfvhBoeu4gGJUc0CoEFwl0OF8AMyLCDecBAgJ4hgwYIC9lw5hoHB4mRGMgZA
+        NwRm0AizAF0hCO++ZIlTDiw+asGoBaMAP2BgAACBS+ipK7iinAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnCorte.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAFFJREFUSEtjGAWDB+y69/vY7nu//1MLb7/9yxJqNATQ1QL7wK1k4xFiATXwwFqg
-        OO0zVjzz3E+wvPOyr1jlQXjUglELhosF1MD0t2AUYAcMDABSH1DBGUtNqgAAAABJRU5ErkJggg==
+        vwAADr8BOAVTJAAAANZJREFUSEvdkrEJwmAYRLOKY1i7o+ACriBob+kCgkuIhVoohCsex2uSgIUHrwjc
+        PcjHP/xfjrf3eSlReU6392cpUXlsMJWoPCxu9o+R/ja4i8rD4mp7H+lvg7uoPCzuLs+R/ja4i8rD4lyi
+        8rDYv8+TNNxF5WGxxxQ23EXlYbHvy5s33EXlYXEuUXlY7DfOd99wF5WHxb4vb95wF5WHxblE5bHBVKLy
+        sNj35c0b7qLysNj35c0b7qLysNhvnO++4S4qD4tzicpjg6lE5TlcX+ulRPWLDMMXs6yo5DOnd2QAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="btnFacturas.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABRSURBVEhLYxgFgwfsuvf72O57v/9TC2+//csSajQE0NUC
-        +8CtZOMRYgE18MBaoDjtM1Y889xPsLzzsq9Y5UF41IJRC4aLBdTA9LdgFGAHDAwAUh9QwRlLTaoAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vgAADr4B6kKxwAAAAFFJREFUSEtjGAWDB+y69/vY7nu//1MLb7/9yxJqNATQ1QL7wK1k4xFiATXwwFqg
+        OO0zVjzz3E+wvPOyr1jlQXjUglELhosF1MD0t2AUYAcMDABSH1DBGUtNqgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnConfiguracion.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAAAZtJREFUSEvlkz1Lw1AUhquuToIIDiJO/gzBFkonFaO2JV8mQ6EgiGBJvGkWSzFR
+        vAAADrwBlbxySQAAAZtJREFUSEvlkz1Lw1AUhquuToIIDiJO/gzBFkonFaO2JV8mQ6EgiGBJvGkWSzFR
         UXHyNwj6E1wEXVzF1U38By41J5zb3Htz6ge2kw+8kMv7nveQr8L/wWTxrSgriG7QGg5WEPdUoTUchrYg
         DMNxvOxjtrrzP1lAzeZQC8TzIGmaNiGe0yIKox3bYpBL97u9Us3NicqCTO94EStlqHDFbpLlXOs7fm4G
         hJUZyWf3oobWmi2yVBXcoTprsugBqzPUUL7MuVuuO0vFmvuqeuosVuZJ7uQJAronP/fi1vYsRlJKVedK
@@ -156,7 +159,7 @@
   <data name="btnCompras.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAAUBJREFUSEtjGAWDB1j02fwnFUO1EgewGUAIQ7USB7AZQAhDtRIHsBmAjnv2t6Dw
+        vAAADrwBlbxySQAAAUBJREFUSEtjGAWDB1j02fwnFUO1EgewGUAIQ7USB7AZQAhDtRIHsBmAjnv2t6Dw
         uw97HsPAR7z6oUaiAmSN2PCdtyfAGFms+7AXGHsl+8Fx4xZv7D5D1rjl+jIUg2CG20x0QBGHWWDu7o+C
         QWJQYxEApqlzbyPYsMP3NqMYbjfJEcVwECbLAhCee3Iy3GAQRnc5DJNtAQivvjgfr+EgjM+CrsOeZ6BG
         QwA2A2wnYgYLMoZZgAtDjYYAbAYQwtgMRcZQoyEAmwGEMDZDkTHUaAhA1mge4IMI02xXFEORMcwgp3A/
@@ -167,7 +170,7 @@
   <data name="btnInventario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAAAJxJREFUSEvtjrENwkAQBK8AmqMrC1JLuEESMocE+M1LG3kHid/YI022N7o6GabN
+        vAAADrwBlbxySQAAAJxJREFUSEvtjrENwkAQBK8AmqMrC1JLuEESMocE+M1LG3kHid/YI022N7o6GabN
         ddmW+rSl2qjfu1UZpsfpcFTlnPTzo8o5NE5UzqFx93b9Le2Vc2jcfd2rPSf3PfNeOYfGico5NE5UzqFx
         onIOjROVc2icqJxD40TlHBonKufQOFE5h8aJyjk0TlTO2R610sGoyjF0MKpSJ/9QtQNXWDYPrzfPNwAA
         AABJRU5ErkJggg==
@@ -176,7 +179,7 @@
   <data name="btnProductos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAAINJREFUSEtjGAWjgKpADYj/Q/EqkAAZoB6IYWb4ggSQQSqUphaYDKXhANmCv1D6
+        vAAADrwBlbxySQAAAINJREFUSEtjGAWjgKpADYj/Q/EqkAAZoB6IYWb4ggSQQSqUphaYDKXhANmCv1D6
         BxB/hTDBAKbpJ5QGufQphAkG/6A0CGBYgAxAGmE0jA0CW6A0LnlkNl6Ay4BRC+AAlwEj3AK6ZjRqAAwL
         bIAY5uUjIAEywAwghpmRCRIYBcMeMDAAAN2UTInYh/OPAAAAAElFTkSuQmCC
 </value>
@@ -184,7 +187,7 @@
   <data name="btnClientes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAAAR1JREFUSEtjGAVDGyhM+6iuOO3zMWSsMPXTXoZV/5mhSsgHctM+KAEN/I8LQ5Xh
+        vAAADrwBlbxySQAAAR1JREFUSEtjGAVDGyhM+6iuOO3zMWSsMPXTXoZV/5mhSsgHctM+KAEN/I8LQ5Xh
         B/+Xq/1HxlBhMAAaAnIxVsNBWH7yR0uoUkzwf5UWD7rhMAxVQqEFWAyG4X/L1P6A1AANoY0FIAxSAzQE
         rwUKk77ogw3DBrAZioxBaoCG4LUAbBAu8G+52l9sBoPwv+WqF0FqgIaALVCa8skGFBwwrDT5gwnYEEIA
         m+EgDJUGWwBlkg+Arr0HMxjI3gEVhgBqZCaag/janrSE2u4X8TVddxNrO+2hwpSBxPp2JaCh//Hh+vp6
@@ -221,9 +224,9 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAvDoAAAJNU0Z0AUkBTAMBAQAB
-        WAEAAVgBAAFAAQABQAEABP8BIQEACP8BQgFNATYHAAE2AwABKAQAAQECAAFAAwABAQEAASAHAAEB/wD/
+        gAEAAYABAAFAAQABQAEABP8BIQEACP8BQgFNATYHAAE2AwABKAQAAQECAAFAAwABAQEAASAHAAEB/wD/
         AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/
-        AP8A/wD/AP8AZQADCAEKAVEBggFRAfcBPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
+        AP8A/wD/AP8AZQADCAEKAVEBewFRAfcBPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
@@ -239,13 +242,13 @@
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
-        OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/AV0BaQFdAej/AP8A/wBbAAFMAU0BTAGRATwBjgE4Af8B
+        OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/AWABaQFgAej/AP8A/wBbAAFMAU0BTAGRATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
-        OAH/ATwBjgE4Af8BPAGOATgB//8A/wD/AFsAAVkBdQFXAfIBPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
+        OAH/ATwBjgE4Af8BPAGOATgB//8A/wD/AFsAAVoBawFaAfIBPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
@@ -268,13 +271,13 @@
         PAGOATgB/wFSAZ0BUgH/AcgB7QHcAf8ByAHtAdwB/wHIAe0B3AH/AcMB6gHWAf8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
-        OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/AV4BbAFeAev/AP8A/wBTAANJAYYBPAGOATgB/wE8AY4B
+        OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/AWEBbAFhAev/AP8A/wBTAANJAYYBPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wFSAZ0B
         UgH/AcgB7QHcAf8ByAHtAdwB/wHIAe0B3AH/AcgB7QHcAf8ByAHtAdwB/wHDAeoB1gH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
-        PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB//8A/wD/AFMAAV0BaQFdAegBPAGOATgB/wE8AY4B
+        PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB//8A/wD/AFMAAWABaQFgAegBPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BUgGdAVIB/wHIAe0B
         3AH/AcgB7QHcAf8ByAHtAdwB/wHIAe0B3AH/AcgB7QHcAf8ByAHtAdwB/wHIAe0B3AH/AcMB6gHWAf8B
@@ -298,7 +301,7 @@
         yAHtAdwB/wHIAe0B3AH/AcgB7QHcAf8BfQG6AYQB/wE8AY4BOAH/ATwBjgE4Af8BwwHqAdYB/wHIAe0B
         3AH/AcgB7QHcAf8ByAHtAdwB/wHIAe0B3AH/AcMB6gHWAf8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
-        OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wFYAW0BWAHu/wD/AP8ASwAD
+        OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wFdAWgBXQHu/wD/AP8ASwAD
         RAF7ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BwwHqAdYB/wHIAe0B
         3AH/AcgB7QHcAf8ByAHtAdwB/wHIAe0B3AH/AYEBvAGJAf8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
@@ -330,7 +333,7 @@
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         wwHqAdYB/wHIAe0B3AH/AcgB7QHcAf8ByAHtAdwB/wHIAe0B3AH/AcMB6gHWAf8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
-        PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BVAFsAVMB8P8A/wD/AEMAAUABQQFAAXABPAGOATgB/wE8AY4B
+        PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BWgFoAVkB8P8A/wD/AEMAAUABQQFAAXABPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
@@ -363,7 +366,7 @@
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
-        PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BUgFyAVEB8/8A/wD/ADsAAjwBOwFlATwBjgE4Af8BPAGOATgB
+        PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BWAFvAVYB8/8A/wD/ADsAAjwBOwFlATwBjgE4Af8BPAGOATgB
         /wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwB
         jgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB
         /wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwB
@@ -377,7 +380,7 @@
         rwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB
         /wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVAB
         rwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB
-        /wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFcAXYBWgHwBAL/AP8A/wAjAAM2AVgBUAGvAUwB/wFQAa8B
+        /wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFeAWsBXgHwBAL/AP8A/wAjAAM2AVgBUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
@@ -385,7 +388,7 @@
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
-        UAGvAUwB//8A/wD/ACMAAV0BgAFYAfMBUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
+        UAGvAUwB//8A/wD/ACMAAWABcwFeAfMBUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
@@ -408,7 +411,7 @@
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB//8A/wD/
-        ACMAAVABjwFMAfkBUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
+        ACMAAVABigFMAfkBUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
@@ -455,11 +458,11 @@
         IAFeARsB/wEgAV4BGwH/ASsBXgErAfz/AP8A/wDHAAMzAVIBMgF9AS4B/wEyAX0BLgH/ATIBfQEuAf8B
         MgF9AS4B/wEyAX0BLgH/AScBagEjAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4B
         GwH/ASABXgEbAf8BKwFeASsB/P8A/wD/AM8AAzMBUgEyAX0BLgH/ATIBfQEuAf8BMgF9AS4B/wEnAWoB
-        IwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASsBUwEmAfr/
+        IwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ATABTgErAfr/
         AP8A/wDXAAMzAVIBMgF9AS4B/wEyAX0BLgH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8B
-        IAFeARsB/wEgAV4BGwH/ASsBUwEmAfr/AP8A/wDfAAMzAVIBLQFzASgB/wEgAV4BGwH/ASABXgEbAf8B
-        IAFeARsB/wEgAV4BGwH/ASABXgEbAf8BKwFTASYB+v8A/wD/AOcAAzMBUgEgAV4BGwH/ASABXgEbAf8B
-        IAFeARsB/wEgAV4BGwH/ASsBaQEmAf7/AP8A/wDvAANEAXoBIAFeARsB/wEgAV4BGwH/ATcBVgEyAf3/
+        IAFeARsB/wEgAV4BGwH/ATABTgErAfr/AP8A/wDfAAMzAVIBLQFzASgB/wEgAV4BGwH/ASABXgEbAf8B
+        IAFeARsB/wEgAV4BGwH/ASABXgEbAf8BMAFOASsB+v8A/wD/AOcAAzMBUgEgAV4BGwH/ASABXgEbAf8B
+        IAFeARsB/wEgAV4BGwH/ATABbgErAf7/AP8A/wDvAANEAXoBIAFeARsB/wEgAV4BGwH/AUABUQE8Af3/
         AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/
         AJcAAUIBTQE+BwABPgMAASgEAAEBAgABQAMAAQEBAAEBBgABCBYAA/8BAAj/GAAI/xgACP8YAAj/GAAI
         /xgACP8YAAj/GAAI/xgACP8YAAH/AfAEAAEPAf8YAAH/AfAEAAEHAf8YAAH/AeAEAAEHAf8YAAH/AeAE
@@ -474,4 +477,7 @@
         /xgACP8YAAj/GAAI/xgACP8YAAj/GAAL
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>122, 17</value>
+  </metadata>
 </root>
